--- a/src/client/app/layout/shell.html
+++ b/src/client/app/layout/shell.html
@@ -2,7 +2,7 @@
     <div id="splash-page" data-ng-show="vm.showSplash" class="dissolve-animation">
         <div class="page-splash">
             <div class="page-splash-message">
-                Modular Demo
+                {{ 'GLOBAL.APP_NAME' | translate }}
             </div>
         </div>
     </div>
